Fix swiper card on mobile, fix font size in slider main text on mobile

--- a/src/blocks/components/card/card.scss
+++ b/src/blocks/components/card/card.scss
@@ -39,7 +39,10 @@
   }
 
   &__inner {
-    padding: 30px;
+    padding: 30px 20px;
+    @include xl-block {
+      padding: 30px;
+    }
     @include lg-block {
       padding: 40px;
     }
