--- a/src/blocks/components/slider-main/slider-main.scss
+++ b/src/blocks/components/slider-main/slider-main.scss
@@ -7,7 +7,7 @@
 
   &__item {
     display: block;
-    padding: 24px 14px;
+    padding: 14px;
     box-sizing: border-box;
     background-repeat: no-repeat;
     background-size: contain;
@@ -18,6 +18,7 @@
     padding-bottom: 7.2%;
 
     @include xs-block {
+      padding: 24px 14px;
       background-size: cover;
       background-position: center left;
     }
@@ -33,8 +34,8 @@
   }
 
   &__title {
-    font-size: 24px;
-    line-height: 28px;
+    font-size: 20px;
+    line-height: 24px;
     color: #fff;
     margin-bottom: 16px;
     @include xs-block {
