--- a/src/styles/general/base.scss
+++ b/src/styles/general/base.scss
@@ -43,9 +43,9 @@ main {
   margin: 0 auto;
   padding-left: 16px;
   padding-right: 16px;
-  
+
   &_text {
-    color: #FFF;
+    color: #fff;
   }
 }
 
@@ -213,7 +213,7 @@ input[type="number"]::-webkit-outer-spin-button {
     max-width: 347px;
 
     @include to($break_xs) {
-      max-width: 95%;
+      max-width: 80%;
     }
 
     &:last-child {
